Fixed content overflowing issue

--- a/mobileapp/src/styles.css
+++ b/mobileapp/src/styles.css
@@ -257,3 +257,8 @@ h1.forum-header {
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+
+.forum-list {
+  padding: 0;
+  margin: 0;
+}
